Create a JS Tiny World
Edit style.css, index.html, index.js.
Add information to worlds.md.

--- a/css/style.css
+++ b/css/style.css
@@ -44,3 +44,31 @@ footer {
 .credits {
     font-size: 0.75rem;
 }
+
+.species {
+    font-style: italic;
+}
+
+.gender {
+    text-decoration: underline;
+}
+
+.legs::before {
+    content: "legs = "
+}
+
+.hands::before {
+    content: "hands = "
+}
+
+.name {
+    font-weight: bold;
+}
+
+.friends {
+    color:#68afe7;
+}
+
+.enemies {
+    color:crimson;
+}
